# Nek5000-deprecated

./: configure  configure.ac  makefile
benchmark/: Makefile.problem
benchmark/eddy_uv/: Makefile.am
benchmark/pipe/: Makefile.am
benchmark/pipe_con/: Makefile.am
benchmark/turbChannel/: Makefile.am
benchmark/vortex/: Makefile.am
config/: fortran_backport.m4
